--- a/style.css
+++ b/style.css
@@ -23,6 +23,18 @@ body{
 	background-color: rgba(196, 199, 199, 0.74);
 } 
 
+.header{
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 10;
+}
+
+.main{
+	padding-top: 60px;
+}
+
 html{
 	scroll-behavior: smooth; 
 }
@@ -48,16 +60,16 @@ a{
 	justify-content: center;
 	flex-wrap: wrap;
 	width: 100%;
-	padding: 20px 0px;
+	min-height: 60px;
 	background: var(--color-orange);
 }
 
 .nav-list{
-	display: flex;
+	display: none;
 }
 
 .nav-item{
-	margin-right: 20px;
+	margin-bottom: 50px;
 }
 
 .nav-item:last-child{
@@ -92,6 +104,24 @@ a{
 
 .link:hover::before {
 	width: 100%;
+}
+
+.hamburger{
+	display: none;
+	position: relative;
+	z-index: 10;
+	cursor: pointer;
+	margin-left: auto;
+	margin-right: 50px;
+}
+
+.bar{
+	display: block;
+	width: 40px;
+	height: 2px;
+	margin: 6px auto;
+	background-color: #6cf735;
+	transition: all 0.3s ease-in-out;
 }
 
 .main-wrapper{
@@ -244,3 +274,61 @@ a{
 	background: var(--color-main);
 }
 
+
+@media screen and (max-width: 832px){
+	body.lock{
+		overflow: hidden;
+	}
+	.hamburger{
+		display: block;
+	}
+
+	.hamburger.active .bar:nth-child(1){
+		transform: translateY(6px) rotate(45deg);
+		background-color: #e42121;
+		border-color: #ec0e0e;
+		border-radius: 2px;
+	}
+
+	.hamburger.active .bar:nth-child(2){
+		transform: scale(0);
+	}
+
+	.hamburger.active .bar:nth-child(3){
+		transform: translateY(-10px) rotate(-45deg);
+		background-color: #e42121;
+		border-color: #ec0e0e;
+		border-radius: 2px;
+	}
+
+	.nav-list{
+		display: flex;
+		flex-direction: column;
+		position: fixed;
+		left: 0;
+		top: -100%;
+		height: 100%;
+		width: 100%;
+		padding-top: 120px;
+		background-color: #394239;
+		text-align: center;
+		transition: 0.3s;
+		overflow: auto;
+		z-index: 2;
+	}
+
+	.nav-list::before{
+		content: "";
+		position: fixed;
+		width: 100%;
+		top: 0;
+		left: 0;
+		min-height: 60px;
+		background: var(--color-orange);
+		z-index: 20;
+	}
+
+	.nav-list.active{
+		top: 0px;
+	}
+}
