--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ a{
 	width: 40px;
 	height: 2px;
 	margin: 6px auto;
-	background-color: #6cf735;
+	background-color: #000000;
 	transition: all 0.3s ease-in-out;
 }
 
